examples/test/testpolicy4036.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4036
  namespace: namespace448
spec:
  podSelector:
    matchLabels:
      key35: value9
      key15: value49
      key42: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value20
          key32: value8
      podSelector:
        matchLabels:
          key29: value1
